style.css
@font-face {
    font-family: headerFont;
    src: url(streamster.ttf);
}
*{
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
body {

    /* Create the parallax scrolling effect 
    height: 100%; 
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    */
}

@media only screen and (max-device-width: 1024px) {
    body {
        background-attachment: scroll;
    }
}

ul {
    list-style-type: none;
    /*border-style:solid;*/
    margin: 0;
    padding: 0;

}
ul li{
    /*border-style:solid;*/
    display: inline;
    margin: 0;
    padding-bottom: .5em;
}

#resume ul li{
    display: block;
    
}

#resume ul li:before{
    font-family: 'FontAwesome';
    content: '\f054';
    margin:0 5px 0 -15px;
}
.banner {
    background: transparent url("background.jpg") 0 0 no-repeat fixed;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
    /*filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='background.jpg', sizingMethod='scale');*/

    height: 60em;
    width: 100%;
    margin-bottom: 3em;
    display: table;
}
.container {
    padding: 4em;
    padding-top:1em;
    background-color: white;
    border-radius: 50px;
}

#logo{
    height: 43px;
    width: auto;
    border-radius: 100px;
}
#menu{
    font-size:1.25em;
}

/* header animation */

@keyframes breathe{
    from {color: #3a2584;}
    to {color: #9e2bac;}
}
#header{
    margin:0;
    font-family: headerFont;
    color: #3a2584;
    text-shadow: -3px 3px 3px #3a2584;
    font-size:5em;
    font-weight:bold;
    text-align: center;
    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
    text-shadow: -10px 0 rgba(0, 255, 255, 0.4), 10px 0 rgba(255, 0, 255, 0.4);
    animation-name:breathe;
    animation-delay: 1s;
    animation-timing-function: ease;
    animation-iteration-count: infinite;
    animation-duration: 5s;
    animation-direction: alternate;
}

#footer{
    text-align: center;
}

#content{
    margin: 0 auto;
    padding-top:100px;
    max-width: 980px;
}
#innerContent{
    background:#eee; 
    border-radius: 50px;
    margin:0 auto;
    padding:2.5em;
}
h2{
    font-family: headerFont;
    color: #3a2584;
    font-size:4em;
    font-weight:bold;
    text-shadow: -3px 3px 3px #3a2584;
    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.2);
    text-shadow: -10px 0 rgba(0, 255, 255, 0.4), 10px 0 rgba(255, 0, 255, 0.4);
    text-align:center;
}
h3{
    margin-top:0.5em;
    font-family:headerFont;
    font-size:2em;
}

p{
    color:#333;
    margin-bottom: 0.5em;
    margin-top:1.0em;
}
a{
    text-decoration: none;
    color:#3a2584;
}
a:visited{
    color:#9e2bac;
}

